--- a/package.json
+++ b/package.json
@@ -2,33 +2,33 @@
   "name": "ecommercesuite",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
     "start:build": "tsc -w",
     "start:run": "nodemon dist/server.js",
     "start": "concurrently npm:start:*"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cron": "^2.0.1",
     "@types/dotenv": "^8.2.0",
-
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mssql": "^8.1.2",
+    "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "concurrently": "^8.0.1",
+    "cron": "^2.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mssql": "^9.1.1",
+    "nodemailer": "^6.9.2",
     "save-dev": "^0.0.1-security",
     "ts-node": "^10.9.1",
-
     "uuid": "^9.0.0"
   },
   "devDependencies": {
