--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/cron": "^2.0.1",
     "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
@@ -22,6 +23,7 @@
     "concurrently": "^8.0.1",
     "cron": "^2.3.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/node": "^20.1.0",
     "@types/uuid": "^9.0.1"
   }
